# property-based-testing-talk

./: LICENSE  README.md  pyproject.toml
notebooks/: property-based-testing-presentation.css  property-based-testing-presentation.ipynb
